--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0",
     "session": "^0.1.0"
   },
   "devDependencies": {},
