made a few sepparation gaffes, going ahead and commiting just save my place in fixing them

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongoose": "^5.3.14",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "session": "^0.1.0"
