--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "favicon": "0.0.2",
     "mongoose": "^5.3.14",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
