--- a/auth/package.json
+++ b/auth/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "auth",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Spotify",
-  "license": "ISC",
+  "name": "web-api-auth-examples",
+  "description": "Basic examples of the Spotify authorization flows through OAuth 2",
+  "version": "0.0.2",
   "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.4",
-    "querystring": "^0.2.0",
-    "request": "^2.88.0"
+    "cookie-parser": "1.3.2",
+    "express": "~4.16.0",
+    "cors": "^2.8.4",
+    "querystring": "~0.2.0",
+    "request": "~2.83.0"
   }
 }
