--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "cryptiles": "^4.1.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "favicon": "0.0.2",
     "mongoose": "^5.3.14",
     "querystring": "^0.2.0",
